--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@
         /* search bar */
 
         #searchbar-cnt {
-            background-color: rgb(250, 250, 250);
+            background-color: rgb(240, 238, 238);
             height: 50px;
             width: 100%;
             display: flex;
@@ -137,10 +137,39 @@
         /* friend list */
 
         #friend-list-cnt {
+            background-color: white;
             height: calc(100% - 210px);
             width: 100%;
             overflow: hidden;
             overflow-y: scroll;
+        }
+
+        .card-chat {
+            border-top: 1px solid rgb(185, 185, 185);
+            height: 80px;
+            width: 100%;
+            display: flex;
+        }
+
+        .card-chat div {
+            padding: 10px;
+        }
+
+        .card-chat span {
+            color: lightgrey;
+        }
+
+        .card-pic {
+            margin: 15px;
+
+            /* debug */
+            width: 50px;
+            height: 50px;
+        }
+
+        .card-time {
+            flex-grow: 1;
+            text-align: right;
         }
 
 
