--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@
 }
 
 
-    /* navigation */
+    /************
+     *navigation*
+     ************/
 
     #nav-cnt {
         width: 35%;
@@ -170,7 +172,9 @@
 
 
 
-    /* chat container */
+    /****************
+     *chat container*
+     ****************/
 
     #chat-cnt {
         width: 65%;
@@ -213,6 +217,31 @@
             width: 100%;
             overflow: hidden;
             overflow-y: scroll;
+            padding: 50px;
+            display: flex;
+            flex-direction: column;
+
+            /* debug */
+            background-color: beige;
+        }
+
+        .message {
+            background-color: white;
+            width: 300px;
+            margin: 5px;
+            padding: 10px 5px 5px 10px;
+            border-radius: 5px;
+        }
+
+        .message span {
+            float: right;
+            font-size: 12px;
+            color: rgb(177, 169, 169);
+        }
+
+        .user-mxg {
+            align-self: flex-end;
+            background-color: rgb(213, 249, 186);
         }
 
 
