--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,15 @@
 }
 
 
-
+/* image controll */
 .card-pic {
     margin: 15px;
+}
+
+.card-pic img {
+    border-radius: 50%;
     width: 50px;
     height: 50px;
-    border-radius: 50%;
 }
 
 /******
